--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -793,7 +793,7 @@ outline: none;
 .reply-user-wrap .reply-finish button{
 	width: 92px;
 	height: 36px;
-	background: #00BC12;
+	background: #999;
 	border-radius: 4px;
 	color: white;
 	line-height: 36px;
