--- a/online-web/src/main/webapp/web/css/forumDetail.css
+++ b/online-web/src/main/webapp/web/css/forumDetail.css
@@ -276,22 +276,19 @@ img {
 #forum .forum-content .forum-content-left .forum-community .community-submit {
     width: 86px;
     height: 36px;
-    line-height: 36px;
-    text-align: center;
     color: #fff;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
-    background-color: #2cb82c;
+    background-color: #999;
     margin-top: 12px;
     font-size: 14px;
     float: right;
-    cursor: pointer;
+    border-radius: 4px;
+    border: 0;
+    outline: none;
 }
 
-#forum .forum-content .forum-content-left .forum-community .community-submit:hover {
-    background-color: #28a528;
-}
 
 #forum .forum-content .forum-content-left .forum-community .forum-community-textarea {
     width: 828px;
@@ -492,7 +489,7 @@ img {
     margin-top: 10px;
 }
 
-#forum .forum-content .forum-content-left .all-comment .forum-community-content .forum-comment-content .forum-comment-right .replay-box .reply-btn div {
+#forum .forum-content .forum-content-left .all-comment .forum-community-content .forum-comment-content .forum-comment-right .replay-box .reply-btn .cancle {
     display: inline-block;
     font-size: 12px;
     color: #999;
@@ -505,15 +502,14 @@ img {
     line-height: 26px;
     text-align: center;
     color: #fff;
-    background-color: #2cb82c;
+    background-color: #999;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
     margin-left: 17px;
-}
-
-#forum .forum-content .forum-content-left .all-comment .forum-community-content .forum-comment-content .forum-comment-right .replay-box .reply-btn .reply:hover {
-    background-color: #28a528;
+    display: inline-block;
+    border: 0;
+    font-size: 12px;
 }
 
 #forum .forum-content .forum-content-left .all-comment .forum-community-content .forum-comment-content .forum-comment-right:hover .reply-comment,
