--- a/online-web/src/main/webapp/web/css/news.css
+++ b/online-web/src/main/webapp/web/css/news.css
@@ -433,10 +433,11 @@ overflow: hidden;
 }
 #forum .forum-content .forum-content-left .forum-content-tag li {
   float: left;
-  margin-right: 34px;
+  margin-right: 15px;
   font-size: 16px;
   color: #333;
   cursor: pointer;
+  width: 100px;
 }
 #forum .forum-content .forum-content-left .forum-content-tag li em.select,
 #forum .forum-content .forum-content-left .forum-content-tag li em.select1 {
