--- a/online-web/src/main/webapp/web/css/forumDetail.css
+++ b/online-web/src/main/webapp/web/css/forumDetail.css
@@ -1051,17 +1051,20 @@ overflow: hidden;
     justify-content: center;
 }
 .writing-go-buy .text {
-    width: 90px;
+     width: 90px;
     height: 36px;
-    background-color: white;
-    border-color: #00BC12;
-    text-align: center;
-    text-decoration: none;
+    background-color: #00bc12;
     display: inline-block;
     font-size: 16px;
+    border: 0;
+    line-height: 34px;
+    outline: none;
+    border-radius: 4px;
 }
 .writing-go-buy .text a {
-    color: #00BC12;
+    color: white;
+    width: 100%;
+    height: 100%;
 }
 
 .nodata-box{
