--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -337,6 +337,7 @@ p{
 .ccvideo{
 	/*padding: 0.2rem 0;*/
     background: #fff;
+    height: 3.94rem;
 }
 .rests_nav_span .title{
 	font-size: 0.3rem;
@@ -2193,6 +2194,7 @@ margin-top: 0.015rem;
 .ccvideo_div{
 	position: relative;
     width: 7.5rem;
+    height: 3.94rem;
     margin: 0 auto;
     /*padding: 0.2rem 0;*/
 }
