--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -492,8 +492,8 @@ p{
     word-break: break-all;
 }
 .consilia_nav_span_title{
-	/* height: 1.8rem;
-	    overflow: hidden; */
+	height: 1.8rem;
+    overflow: hidden;
 }
 .consilia_nav_span .stick_img{
 	font-size: 0.3rem;
@@ -2216,5 +2216,5 @@ margin-top: 0.015rem;
     margin: 0 auto;
 }
 .panels_essay_main{
-	/*min-height: 0.45rem;*/
+	min-height: 0.45rem;
 }
