--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -172,9 +172,23 @@ color: #999999;
 .wrap-anthology ul li:last-child{
 	border: 0;
 }
-
+.wrap-anthology ul li a{
+	width: 100%;
+	height: 100%;
+	color: #666666;
+}
 .play-album{
 	margin-left: 15px;
+}
+.play-album .course-length{
+	font-size: 12px;
+	color: #999999;
+}
+.play-album .course-length img{
+
+	    float: left;
+    margin-top: 3px;
+    margin-right: 5px;
 }
 .play-album p:nth-child(1){
 	margin-bottom: 6px;
