--- a/wechat/src/main/webapp/xcview/css/physician/consilia.css
+++ b/wechat/src/main/webapp/xcview/css/physician/consilia.css
@@ -85,7 +85,7 @@ header{
 /*头部结束*/
 
 /*中间内容开始*/
-.consilia_main_center h2{
+.column h2{
 	font-size: 0.36rem;
 	color: #333;
 	/*text-align: center;*/
@@ -96,6 +96,30 @@ header{
 	white-space: nowrap;
 	padding-top: 0.3rem;
 	margin-bottom: 0.3rem;
+}
+.media h2{
+    font-size: 0.36rem;
+    color: #333;
+    /*text-align: center;*/
+    width: 6.36rem;
+    margin: 0 auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding-top: 0.3rem;
+    margin-bottom: 0.3rem;
+}
+.medical_cases h2{
+    font-size: 0.36rem;
+    color: #333;
+    /*text-align: center;*/
+    width: 6.36rem;
+    margin: 0 auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding-top: 0.3rem;
+    margin-bottom: 0.3rem;
 }
 .consilia_main_center{
 	width: 100%;
@@ -493,6 +517,7 @@ header{
     width: 4.8rem;
     /* height: 4.28rem; */
     float: right;
+    margin-right: 0.26rem;
 }
 .caption h2 {
     font-size: 0.36rem;
