--- a/online-web/src/main/webapp/web/css/forumDetail.css
+++ b/online-web/src/main/webapp/web/css/forumDetail.css
@@ -1050,21 +1050,17 @@ overflow: hidden;
     flex-direction: column;
     justify-content: center;
 }
-.writing-go-buy .text {
-     width: 90px;
+.writing-go-buy .text a {
+    width: 90px;
     height: 36px;
     background-color: #00bc12;
     display: inline-block;
     font-size: 16px;
-    border: 0;
     line-height: 34px;
     outline: none;
-    border-radius: 4px;
-}
-.writing-go-buy .text a {
-    color: white;
-    width: 100%;
-    height: 100%;
+    border-radius: 4px;  
+    color:white;
+    text-align: center;
 }
 
 .nodata-box{
