专辑播放增加百分比

--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -184,6 +184,10 @@ color: #999999;
 	font-size: 12px;
 	color: #999999;
 }
+.play-album .course-length span{
+	margin-left: 15px;
+	color: #00bc12;
+}
 .play-album .course-length img{
 
 	    float: left;
