去购买样式

--- a/online-web/src/main/webapp/web/css/forumDetail.css
+++ b/online-web/src/main/webapp/web/css/forumDetail.css
@@ -1050,7 +1050,7 @@ overflow: hidden;
     flex-direction: column;
     justify-content: center;
 }
-.writing-go-buy .text a {
+.writing-go-buy a {
     width: 90px;
     height: 36px;
     background-color: #00bc12;
