发现--修改封面图，删除学费。测试专辑跳转

--- a/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
@@ -357,6 +357,8 @@ header{
 	width: 100%;
 	margin-bottom: 0.4rem;
 	background: #fff;
+	padding-top: 0.2rem;
+	margin-top: 0.2rem;
 }
 .site_title{
 	margin-bottom: 0.2rem;
