--- a/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
+++ b/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
@@ -79,7 +79,7 @@
 	}
 	.swiper-banner-list span{
 		margin: 0 0.2rem !important;
-		background: #00BC12 !important;
+		/*background: #00BC12 !important;*/
         margin: 0 0.08rem !important;
 	}
 	.swiper-container-box{
