--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -807,7 +807,7 @@ color: white;
 }
 .select_lable li{
 	float: left;
-	background: rgba(0,188,18,0.30);
+	/*background: rgba(0,188,18,0.30);*/
 	color: white;
 	font-size: 0.24rem;
 	text-align: center;
