文章添加--展开收起事件。

--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1337,11 +1337,11 @@ p{
 .article_nav_span .title{
 	font-size: 0.3rem;
     color: #151515;
-    display: -webkit-box;
-    float: left;
+    /*display: -webkit-box;*/
+    /*float: left;*//* 
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: nowrap; */
     width: 100%;
     display: block;
 }
