查看大纲---外部引用-js模板加载问题。整体背景色修改

--- a/wechat/src/main/webapp/xcview/css/course_outline.css
+++ b/wechat/src/main/webapp/xcview/css/course_outline.css
@@ -112,8 +112,9 @@ header {
 }
 .outline_list{
 	width: 6.98rem;
-    /* float: right; */
     margin: 0 auto;
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
 }
 .outline_list_ul p{
 	font-size: 0.26rem;
