--- a/online-web/src/main/webapp/web/css/ResidentHospital.css
+++ b/online-web/src/main/webapp/web/css/ResidentHospital.css
@@ -245,7 +245,8 @@ a {
 #hos_Administration .hos_base_inf .bottomContent > div .doc_zhicheng,
 #hos_Administration .hos_base_inf .bottomContent > div .doc_shanchang,
 #hos_Administration .hos_base_inf .bottomContent > div .doc_hospital,
-#hos_Administration .hos_base_inf .bottomContent > div .hos_weixin{
+#hos_Administration .hos_base_inf .bottomContent > div .hos_weixin,
+#hos_Administration .hos_base_inf .bottomContent > div .doc_tel{
 	width: 280px;
  	height: 36px;
  	border: 1px solid #f0f0f0;
