--- a/online-web/src/main/webapp/template/course_detail.html
+++ b/online-web/src/main/webapp/template/course_detail.html
@@ -3,9 +3,9 @@
 </p><p style="line-height: 1.75em;"><span
         style="font-family: 微软雅黑; font-size: 14px; color: rgb(89, 89, 89);">专辑购买途径：</span><a
         href="http://www.ipandatcm.com/web/html/courseDetail.html?courseId=811&webUrl=http%3A%2F%2Fwww.ipandatcm.com"
-        target="_self" title="《跟着中医学养娃—杭州老师育儿十讲》"
+        target="_self" title="《某某课程名》"
         style="font-family: 微软雅黑; text-decoration: underline; font-size: 14px; color: rgb(84, 141, 212);"><span
-        style="font-family: 微软雅黑; font-size: 14px; color: rgb(84, 141, 212);">《跟着中医学养娃—杭州老师育儿十讲》</span></a></p><p
+        style="font-family: 微软雅黑; font-size: 14px; color: rgb(84, 141, 212);">《某某课程名》</span></a></p><p
         style="line-height: 1.5em;"><br/></p><p style="line-height: 2em;"><span
         style="font-family: 微软雅黑; font-size: 16px; color: rgb(0, 176, 80);">课程简介</span></p><p
         style="line-height: 1.75em;"><span style="font-family: 微软雅黑; font-size: 14px; color: rgb(89, 89, 89);">小儿为“少阳之体”因此在成长过程中，发烧就成了非常常见的现象，感冒会引起发烧、积食会引起发烧，偶尔还会见到因为在长身体引起的“生理性发热”。</span>
