--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -131,24 +131,17 @@
     
 /*<!--课程/直播/资源/盒子-->*/
 .contentWrap .little_box{
-	width: 950px;
+	width: 960px;
     display: block;
     float: right;
     vertical-align: top;
-    padding: 0 30px;
     min-height: 520px;
     background-color: #fff;
-    padding-bottom: 50px;
     display: none;
-    margin-top: 20px;
 }
 .arrow_jt{
 	color: #d8d8d8;
 }
-#open_list{
-	
-}
-
 .doctor_inf .picModal {
   cursor: pointer;
   position: absolute;
@@ -965,6 +958,374 @@ outline: none;
 	border: 0;
 	outline: none;
 }
+/*师承收徒 跟师直播*/
+.live-top-title{
+	width: 100%;
+	height: 60px;
+	border-bottom: 1px solid #f0f0f0;
+	line-height: 60px;
+	padding: 0 20px;
+}
+.live-top-title span{
+	font-size: 16px;
+}
+.live-top-title button{
+	width: 92px;
+	height: 36px;
+	background: #00bc12;
+	border-radius: 4px;
+	color: white;
+	line-height: 36px;
+	border: 0;
+	outline: none;
+	float: right;
+	margin-top: 12px;
+}
+.disciple-list-wrap{
+	padding: 20px;
+	overflow: hidden;
+}
+.disciple-search-main{
+	margin-bottom: 20px;
+	overflow: hidden;
+}
+.disciple-search-main select{
+	width: 100px;
+	height: 36px;
+	border: 1px solid #f0f0f0;
+	float: left;
+	line-height: 30px;
+	cursor: pointer;
+	outline: none;
+}
+.disciple-search-main .disciple-search{
+	width: 280px;
+	height: 36px;
+	border: 1px solid #f0f0f0;
+	position: relative;
+	overflow: hidden;
+}
+.disciple-search-main .disciple-search img{
+	float: left;
+	display: block;
+	margin: 10px 5px 10px 10px;
+}
+.disciple-search-main .disciple-search input{
+	width: 180px;
+	border: 1px;
+	height: 100%;
+	padding-left: 5px;
+    border: 0;
+    outline: none;
+}
+.disciple-search-main .disciple-search button{
+	width: 60px;
+	height: 100%;
+	float: right;
+	background: #00bc12;
+	outline: none;
+	border: 0;
+	color: white;
+}
+.disciple-table-main table{
+	border: 1px solid #dedede;
+	text-align: center;
+	table-layout: fixed;
+	width:100%;
+}
+.disciple-table-main table th{
+	text-align: center;
+	padding: 10px 0;
+	background: #f0f0f0;
+	border: 1px solid #dedede;
+}
+.disciple-table-main table th:nth-child(1){
+	width: 126px;
+}
+.disciple-table-main table th:nth-child(2){
+	width: 178px;
+}
+.disciple-table-main table th:nth-child(3){
+	width: 70px;
+}
+.disciple-table-main table th:nth-child(4){
+	width: 70px;
+}
+.disciple-table-main table th:nth-child(5){
+	width: 76px;
+}
+.disciple-table-main table th:nth-child(6){
+	width: 76px;
+}
+.disciple-table-main table th:nth-child(7){
+	width: 76px;
+}
+.disciple-table-main table th:nth-child(8){
+	width: 76px;
+}
+.disciple-table-main table th:nth-child(9){
+	width: 170px;
+}
+
+.disciple-table-main table td{
+	padding: 10px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.disciple-table-main table tr img{
+	width: 106px;
+	height: 60px;
+}
+.disciple-table-main table tr span{
+	color: #188EEE;
+}
+.disciple-table-main table tr .disciple-edit{
+	margin: 0 5px;
+}
+.disciple-set-wrap{
+	padding: 30px 20px 20px;
+	overflow: hidden;
+}
+.comment-style{
+	margin-bottom: 20px;
+}
+.comment-style .comment-left-tip{
+	display: inline-block;
+    width: 89px;
+    text-align: right;
+    font-size: 14px;
+    color: #2A2A2A;
+    line-height: 19px;
+    margin-right: 20px;
+}
+.comment-style .comment-left-tip em{
+		color: red;
+	display: inline;
+	margin: 0 5px;
+}
+
+.comment-style input{
+	width: 280px;
+    height: 36px;
+    border: 1px solid #F0F0F0;
+    outline: none;
+    text-indent: 1em;
+    font-size: 14px;
+}
+.disciple-wrap-img{
+	display: inline-block;
+    width: 260px;
+    height: 147px;
+    border: 1px solid #f0f0f0;
+    vertical-align: middle;
+    margin-right: 30px;
+    position: relative;
+    background: #f0f0f0;
+}
+.class-fengmian{
+	width: 603px;
+}
+.class-fengmian > span:nth-child{
+	display: inline-block;
+    width: 89px;
+    text-align: right;
+    font-size: 14px;
+    color: #2A2A2A;
+    line-height: 19px;
+    margin-right: 20px;
+}
+
+.class-fengmian .comment-left-tip em{
+	color: red;
+	display: inline;
+	margin: 0 5px;
+}
+
+.class-fengmian .comment-left-tip{
+	display: inline-block;
+    width: 89px;
+    text-align: right;
+    font-size: 14px;
+    color: #2A2A2A;
+    line-height: 19px;
+    margin-right: 20px;
+}
+
+.class-fengmian .fengmian_tip{
+	 display: inline-block;
+    width: 190px;
+    color: #999;
+    float: right;
+    margin-top: 37px;
+}
+
+.comment-style .introduce-text{
+	width: 540px;
+	height: 160px;
+	resize: none;
+	border: 1px solid #f0f0f0;
+	padding: 10px;
+	outline: none;
+}  
+.comment-style .class-style{
+	width: 280px;
+	height: 36px;
+	border: 1px solid #f0f0f0;
+	outline: none;
+	line-height: 30px;
+}
+.comment-style .priceTip{
+	margin-left: 15px;	
+}
+.comment-style .priceTip span{
+	color: #999999;
+}
+.comment-style .price-write{
+	width: 120px;
+}
+.comment-style .original-price{
+	width: 120px;
+}
+.comment-style .class-text{
+	width: 540px;
+    height: 160px;
+    resize: none;
+    border: 1px solid #f0f0f0;
+    padding: 10px;
+    outline: none;
+}
+.comment-style .class-submission{
+	width: 120px;
+	height: 36px;
+	border: 0;
+	outline: none;
+	background: #00BC12;
+	border-radius: 4px;
+	color: white;
+}
+/*选择弟子*/
+.pupil-modal-wrap{
+	position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    background: white;
+    width: 580px;
+    max-height: 381px;
+    padding-bottom: 90px;
+    box-sizing: border-box;
+    z-index: 999;
+    padding: 20px 30px;
+}
+.pupil-modal-wrap .pupil-top{
+	overflow: hidden;
+}
+.pupil-modal-wrap .pupil-top p{
+	float: left;
+	margin-bottom: 20px;
+}
+
+.pupil-modal-wrap .pupil-top img{
+	float: right;
+}
+.pupil-modal-wrap .sava-pupil{
+	width: 495px;
+	max-height: 210px;
+	margin: 0 auto;
+	overflow-y: auto;
+}
+
+
+.sava-pupil ul{
+	margin: 0;
+	overflow: hidden;
+}
+.sava-pupil ul li{
+	float: left;
+	width: 90px;
+	margin-right: 5px;
+	margin-bottom: 20px;
+}
+.sava-pupil ul li:nth-child(5n){
+	margin-right: 0;
+}
+.sava-pupil ul li .set-lable{
+	overflow: hidden;
+	width: fit-content;
+	width: -webkit-fit-content;
+}
+.sava-pupil ul li p{
+	width: 14px;
+	height: 14px;
+	border: 1px solid #dedede;
+	float: left;
+	margin-right: 8px;
+	margin-top: 3px;
+	margin-bottom: 0;
+}
+.sava-pupil ul li p img{
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+.sava-pupil ul li p .active{
+	display: block;
+}
+.sava-pupil ul li span{
+	float: left;
+	max-width: 56px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+
+.all-select-pupil{
+	margin-top: 40px;	
+}
+.all-select-main{
+	cursor: pointer;
+}
+.all-select-main p{
+	width: 14px;
+	height: 14px;
+	float: left;
+	margin-bottom: 0;
+	margin-top: 3px;
+	border: 1px solid #f0f0f0;
+}
+.all-select-main p img{
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
+.all-select-main span{	
+	float: left;
+	margin-left: 5px;
+}
+
+.all-select-pupil .all-select-main .active{
+	display: block;
+}
+.all-select-pupil .select-pupil{
+	width: 120px;
+	height: 36px;
+	background: #00BC12;
+	border: 1px solid #00BC12;
+	border-radius: 4px;
+	float: right;	
+	color: white;
+	outline: none;
+}
+
+
+
+
+
+
 
 
 
@@ -1402,6 +1763,7 @@ outline: none;
 	border: 1px solid #F0F0F0;
 	padding-left: 5px;
 	cursor: pointer;
+	outline: none;
 }
 
 
@@ -2140,6 +2502,7 @@ outline: none;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
 	background: #fff;
 	width: 960px;
 	height: 772px;
@@ -2205,6 +2568,7 @@ outline: none;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
 	background: white;
 	padding-bottom: 90px;
 	z-index: 999;
