--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -2488,13 +2488,64 @@ margin-top: 0.015rem;
 
 /*师承课程提示开始*/
 .learn_tips{
-
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
 }
 .learn_tips_bg{
-
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    z-index: 999999991;
+    top: 0;
+    left: 0;
 }
 .learn_tips_main{
-	
+	width: 5.4rem;
+    height: 3.27rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.635rem;
+    margin-left: -2.7rem;
+    background: #f4f4f4;
+    z-index: 999999999;
+    border-radius: 6px;
+}
+.learn_tips_close{
+	font-size: 0.4rem;
+    color: #999;
+    text-align: right;
+    padding-right: 0.2rem;
+    height: 0.5rem;
+}
+.learn_tips_title{
+	font-size: 0.28rem;
+	color: #333333;
+	text-align: center;
+}
+.learn_tips_cen{
+	width: 4.36rem;
+	font-size: 0.28rem;
+	color: #333333;
+	margin: 0 auto;
+	margin-bottom: 0.3rem;
+}
+.learn_tips_submit{
+	width: 2.9rem;
+	height: 0.72rem;
+	line-height: 0.72rem;
+	font-size: 0.3rem;
+	color: #FFFFFF;
+	text-align: center;
+	margin: 0 auto;
+	background: #00BC12;
+	border-radius: 8px;
 }
 /*师承课程提示结束*/
 
