--- a/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
@@ -357,7 +357,7 @@ header{
 	width: 100%;
 	margin-bottom: 0.4rem;
 	background: #fff;
-	padding-top: 0.2rem;
+	padding: 0.2rem 0;
 	margin-top: 0.2rem;
 }
 .site_title{
