--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -1721,7 +1721,7 @@ p{
     color: #999999;
     float: left;
     margin-left: 0.1rem;
-    margin-top: 0.03rem;
+    margin-top: 0.05rem;
 }
 .zhibo_play {
     border-radius: 0 0 0 3px;
@@ -2309,6 +2309,70 @@ margin-top: 0.015rem;
 }
 /*跟师结束*/
 
+/*远程诊疗开始*/
+.therapy{
+	width: 7.5rem;
+	height: 100%;
+	margin: 0 auto;
+	background: #fff;
+}
+
+.therapy_title{
+	width: 6.98rem;
+	height: 100%;
+	margin: 0 auto;
+	padding-top: 0.2rem;
+	margin-bottom: 0.38rem;
+}
+.therapy .border {
+    display: inline-block;
+    width: 0.06rem;
+    height: 0.28rem;
+    border-radius: 100px;
+    background: #00bc12;
+    float: left;
+    margin-right: 0.08rem;
+    margin-top: 0.05rem;
+}
+.subscribe{
+	width: 6.96rem;
+	height: 0.86rem;
+	line-height: 0.86rem;
+	margin: 0 auto;
+	background: #F8F8F8;
+	border: 1px solid #DEDEDE;
+	overflow: hidden;
+	margin-bottom: 0.2rem;
+}
+.subscribe_time{
+	width: 3.8rem;
+	font-size: 0.28rem;
+	color: #333333;
+	float: left;
+	margin-left: 0.2rem;
+}
+.subscribe_btn{
+	width: 1.6rem;
+	height: 0.86rem;
+	line-height: 0.86rem;
+	font-size: 0.28rem;
+	color: #FFFFFF;
+	text-align: center;
+	background: #00BC12;
+	float: right;
+}
+.subscribe_btns{
+	width: 1.6rem;
+	height: 0.86rem;
+	line-height: 0.86rem;
+	font-size: 0.28rem;
+	color: #FFFFFF;
+	text-align: center;
+	background: #DEDEDE;
+	float: right;
+}
+/*远程诊疗结束*/
+
 /*老师解惑开始*/
 .QA{
 	width: 100%;
@@ -2459,6 +2523,13 @@ margin-top: 0.015rem;
 	padding: 0.2rem;
 	margin-bottom: 0.3rem;
     margin-top: 0.3rem;
+}
+.become_disciple_img{
+	width: 0.26rem;
+	height: 0.19rem;
+	position: absolute;
+	top: -0.2rem;
+    left: 0.2rem;
 }
 .become_disciple_bg{
 	width: 0.1rem;
