--- a/wechat/src/main/webapp/xcview/css/physician/reserve_information.css
+++ b/wechat/src/main/webapp/xcview/css/physician/reserve_information.css
@@ -181,6 +181,183 @@ header{
 .handler_reminder span{
     display: block;
 }
-
-
 /*中间内容结束*/
+
+/*点击出现弹出框开始*/
+.time_popout{
+    width: 7.5rem;
+    height: 100%;
+    display: none;
+}
+.time_popout_bg{
+    width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999;
+    background: #000;
+    opacity: 0.3;
+}
+.time_popout_main{
+    width: 7.5rem;
+    /*height: 6.02rem;*/
+    max-height: 6.02rem;
+    background: #fff;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 999999;
+    overflow: scroll;
+}
+.time_popout_main ul li{
+    width: 100%;
+    height: 1.2rem;
+    line-height: 1.2rem;
+    text-align: center;
+    border-bottom: 1px solid #f0f0f0;
+    font-size: 0.3rem;
+    color: #333333;
+}
+.time_popout_main ul li:last-child{
+    border: 0;   
+}
+.time_popout_main ul li img{
+    width: 0.33rem;
+    height: 0.24rem;
+    vertical-align: middle;
+    float: right;
+    margin-top: 0.45rem;
+    opacity: 0;
+    position: absolute;
+    right: 0.26rem;
+}
+/*点击出现弹出框结束*/
+
+/*点击申请成功开始*/
+.prosperity_popout{
+    width: 7.5rem;
+    height: 100%;
+    display: none;
+}
+.prosperity_popout_bg{
+    width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999;
+    background: #000;
+    opacity: 0.3;
+}
+.prosperity_popout_main{
+    width: 5.4rem;
+    height: 3.78rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.89rem;
+    margin-left: -2.7rem;
+    background: #fff;
+    border-radius: 16px;
+    z-index: 999999;
+}
+.prosperity_popout_title{
+    width: 2.2rem;
+    height: 0.6rem;
+    line-height: 0.6rem;
+    font-size: 0.32rem;
+    color: #333333;
+    margin: 0 auto;
+    margin-top: 0.6rem;
+    margin-bottom: 0.3rem;
+}
+.prosperity_popout_title img{
+    width: 0.6rem;
+    height: 0.6rem;
+    vertical-align: middle;
+    margin-right: 0.16rem;
+}
+.prosperity_cen{
+    width: 4.8rem;
+    font-size: 0.28rem;
+    color: #333333;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 0.6rem;
+}
+.prosperity_popout_hide{
+    width: 100%;
+    height: 0.87rem;
+    line-height: 0.87rem;
+    border-top: 1px solid #f0f0f0;
+    font-size: 0.3rem;
+    color: #00BC12;
+    text-align: center;
+}
+/*点击申请成功结束*/
+
+/*点击申请失败开始*/
+.failure_popout{
+    width: 7.5rem;
+    height: 100%;
+    display: none;
+}
+.failure_popout_bg{
+    width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999;
+    background: #000;
+    opacity: 0.3;
+}
+.failure_popout_main{
+    width: 5.4rem;
+    height: 3.78rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.89rem;
+    margin-left: -2.7rem;
+    background: #fff;
+    border-radius: 16px;
+    z-index: 999999;
+}
+.failure_popout_title{
+    width: 2.2rem;
+    height: 0.6rem;
+    line-height: 0.6rem;
+    font-size: 0.32rem;
+    color: #333333;
+    margin: 0 auto;
+    margin-top: 0.6rem;
+    margin-bottom: 0.3rem;
+}
+.failure_popout_title img{
+    width: 0.6rem;
+    height: 0.6rem;
+    vertical-align: middle;
+    margin-right: 0.16rem;
+}
+.failure_cen{
+    width: 4.8rem;
+    font-size: 0.28rem;
+    color: #333333;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 0.6rem;
+}
+.failure_popout_hide{
+    width: 100%;
+    height: 0.87rem;
+    line-height: 0.87rem;
+    border-top: 1px solid #f0f0f0;
+    font-size: 0.3rem;
+    color: #00BC12;
+    text-align: center;
+}
+/*点击申请失败结束*/
+
+
