--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1650,6 +1650,145 @@ display: -webkit-box;
 	margin-bottom: 90px;
 }
 /*师承管理*/
+.namage-top{
+	width: 100%;
+    height: 60px;
+    border-bottom: 1px solid #f0f0f0;
+    line-height: 60px;
+    padding: 0 20px;
+}
+.namage-top span{
+	font-size: 16px;
+}
+.namage-top button{
+	width: 124px;
+    height: 36px;
+    background: #00bc12;
+    border-radius: 4px;
+    color: white;
+    line-height: 36px;
+    border: 0;
+    outline: none;
+    float: right;
+    margin-top: 12px;
+}    
+.namage-list-table{
+	padding: 20px;
+
+}
+    
+
+.namage-list-table table{
+	width: 100%;
+	border: 1px solid #dedede;
+	text-align: center;
+	table-layout: fixed;
+}
+
+.namage-list-table table th{
+	background: #f0f0f0;
+	text-align: center;
+	padding: 10px 0;
+	border: 1px solid #dedede;
+}
+.namage-list-table table th:nth-child(1){
+	width: 227px;
+}
+.namage-list-table table th:nth-child(2){
+	width: 75px;
+}
+.namage-list-table table th:nth-child(3){
+	width: 61px;
+}
+.namage-list-table table th:nth-child(4){
+	width: 79px;
+}
+.namage-list-table table th:nth-child(5){
+	width: 65px;
+}
+.namage-list-table table th:nth-child(6){
+	width: 65px;
+}
+.namage-list-table table th:nth-child(7){
+	width: 94px;
+}
+.namage-list-table table th:nth-child(8){
+	width: 161px;
+}
+.namage-list-table table th:nth-child(9){
+	width: 85px;
+}
+.namage-list-table table td{
+	height: 80px;
+	border: 1px solid #dedede;
+	overflow: hidden;
+	padding: 0 10px
+}
+.namage-list-table table td span{
+	color: #188EEE;
+	cursor: pointer;
+}
+
+.namage-list-table .namage-title{
+	    width: 209px;
+    overflow: hidden;
+    height: 40px;
+    line-height: 20px;
+    font-size: 14px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-align: left;
+}
+.see-namage-modal{
+	width: 960px;
+	height: 822px;
+	background: white;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	z-index: 99999;
+}
+.see-namage-top{
+	width: 100%;
+	height: 60px;
+	line-height: 60px;
+	border-bottom: 1px solid #f0f0f0;
+	padding: 0 40px;
+}
+.see-namage-top p{
+	float: left;
+	font-size: 16px;
+}
+
+.see-namage-top span{
+	float: right;
+	cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1678,6 +1817,7 @@ display: -webkit-box;
 	border: 1px solid #f0f0f0;
 	outline: none;
 	resize: none;
+	padding: 10px;
 }
 .comment-apprentice input{
 	width: 120px;
@@ -1700,6 +1840,7 @@ display: -webkit-box;
 	background: #00BC12;
 	border-radius: 4px;
 	border: 0;
+	outline: none;
 }
 
 
