直播间--bug修改

--- a/online-web/src/main/webapp/web/css/live_streamings.css
+++ b/online-web/src/main/webapp/web/css/live_streamings.css
@@ -597,3 +597,13 @@
 } 
 /*设置文档和视频的动画切换结束*/
 
+/*@media (max-width: 1365){ 
+	.page-pc .player-container{
+		height: 93% !important;
+	}
+}*/
+@media screen and (max-width:1367px){ 
+	.page-pc .player-container{
+		height: 93% !important;
+	}
+} 
