pc直播间--视频高度修改

--- a/online-web/src/main/webapp/web/css/live_streamings.css
+++ b/online-web/src/main/webapp/web/css/live_streamings.css
@@ -607,3 +607,8 @@
 		height: 93% !important;
 	}
 } 
+@media screen and (max-height:600px){ 
+	.page-pc .player-container{
+		height: 85% !important;
+	}
+} 
