--- a/wechat/src/main/webapp/xcview/css/my_homepage.css
+++ b/wechat/src/main/webapp/xcview/css/my_homepage.css
@@ -101,7 +101,7 @@ header{
     height: 1.56rem;
     background: #fff;
     margin: 0 auto;
-    margin-top: 0.2rem;
+    /*margin-top: 0.2rem;*/
     margin-bottom: 0.2rem;
 }
 .my_main ul li{
