--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1131,7 +1131,6 @@ outline: none;
     height: 147px;
     border: 1px solid #f0f0f0;
     vertical-align: middle;
-    margin-right: 30px;
     position: relative;
     background: #f0f0f0;
 }
@@ -1546,6 +1545,7 @@ outline: none;
 word-break:break-all;
 overflow: hidden;
 border: 1px solid #ededed;
+padding: 10px;
 }
 .answer-list-table table :nth-child(2){
 	width: 228px;
@@ -1557,22 +1557,20 @@ border: 1px solid #ededed;
 
 
 .answer-list-table table .question{
-	  width: 229px;
+	  width: 100%;
 overflow: hidden;
-padding: 10px;
-height: 80px;
-line-height: 22px;
+height: 60px;
+line-height: 20px;
 font-size: 14px;
 display: -webkit-box;
 -webkit-box-orient: vertical;
 -webkit-line-clamp: 3;
 }
 .answer-list-table table .answer{
-  width: 291px;
+  width: 100%;
 overflow: hidden;
-padding: 10px;
-height: 80px;
-line-height: 22px;
+height: 60px;
+line-height: 20px;
 font-size: 14px;
 display: -webkit-box;
 -webkit-box-orient: vertical;
@@ -1742,7 +1740,7 @@ display: -webkit-box;
 }
 .see-namage-modal{
 	width: 960px;
-	height: 822px;
+	max-height: 822px;
 	background: white;
 	position: fixed;
 	left: 50%;
@@ -1767,13 +1765,200 @@ display: -webkit-box;
 	float: right;
 	cursor: pointer;
 }
+.see-details-wrap{
+	overflow: hidden;
+	padding: 40px 20px 20px;
+	width: 100%;
+	max-height: 667px;
+	overflow-y: auto;
+}
+.commer-see-menu{
+	overflow: hidden;
+	margin-bottom: 20px;
+}
+.commer-see-menu span {
+	display: block;
+	float: left;
+	width: 95px;
+	text-align: right;
+	margin-right: 20px;
+}
+.commer-see-menu p{
+	width: 680px;
+	float: left;
+	margin: 0;
+}
+.commer-see-menu .cover-map-namage{
+	width: 260px;
+	height: 147px;
+	overflow: hidden;
+}
+.download-file{
+	padding-bottom: 60px;
+	margin-left: 135px;
+}
+.download-file button{
+	border: 1px solid #00BC12;
+	border-radius: 4px;
+	width: 120px;
+	height: 36px;
+	background: white;
+	color: #00bc12;
+}
+/*招生简章*/
+.recruit-students{
+	padding: 30px 20px;
+}
+.comment-set-rules{
+	margin-bottom: 20px;
+	overflow: hidden;
+}
+.comment-set-rules .warning-manage{
+	font-size: 14px;
+    color: #FF4012;
+    line-height: 30px;
+    text-indent: 20px;
+    background: url(../images/icons/tanhao.png) no-repeat left center;
+    margin-left: 135px;
+    margin-bottom: 0;
+}
+.comment-set-rules .comment-left-rules{
+	display: inline-block;
+	width: 105px;
+	text-align: right;
+	margin-right: 25px;
+}
+.comment-set-rules .comment-left-rules em{
+	display: inline-block;
+	color: red;
+}
+.comment-set-rules input{
+	width: 120px;
+	height: 36px;
+	border: 1px solid #f0f0f0;
+	padding-left: 5px;
+	outline: none;
+}
+.comment-set-rules .teacher-name{
+	width: 280px;
+	height: 36px;
+	border: 1px solid #f0f0f0;
+	outline: none;
+}
+.comment-set-rules .recruit-title{
+	width: 280px;
+	height: 36px;
+	border: 1px solid #f0f0f0;
+	outline: none;
+}
+.mamage-wrap-img{
+	display: inline-block;
+    width: 260px;
+    height: 147px;
+    border: 1px solid #f0f0f0;
+    vertical-align: middle;
+    position: relative;
+    background: #f0f0f0;
+}
+.comment-set-rules .fengmian_tip{
+	display: inline-block;
+    width: 190px;
+    color: #999;
+    float: right;
+    margin-top: 37px;
+}
+ .comment-set-float {
+ 	margin-bottom: 20px;
+ 	overflow: hidden;
+ }
+ .comment-set-float .comment-left-float{
+ 	float: left;
+ 	display: block;
+ 	width: 105px;
+ 	margin-right: 25px;
+ 	text-align: right;
+ }
+  .comment-set-float .comment-left-float em{
+  	display: inline-block;
+  	color: red;
+  }
+ .comment-set-float .warning-manage{
+ 	font-size: 14px;
+    color: #FF4012;
+    line-height: 30px;
+    text-indent: 20px;
+    background: url(../images/icons/tanhao.png) no-repeat left center;
+ 	margin-bottom: 0;
+ 	clear: both;
+ }   
+ .comment-set-float .comment-right-float{
+ 	float: left;
+ 	width: 600px;
+ }
+.comment-right-float select{
+	width: 168px;
+	height: 36px;
+	outline: none;
+	border: 1px solid #f0f0f0;
+	line-height: 30px;
+	margin-right: 15px;
+}
+ .comment-right-float .address-text{
+ 	width: 500px;
+ 	height: 90px;
+ 	border: 1px solid #f0f0f0;
+ 	outline: none;
+ 	display: block;
+ 	resize: none;
+ 	margin-top: 10px;
+ 	padding: 10px;
+ }
+.comment-right-float .enclosure-text{
+	width: 280px;
+	height: 36px;
+	border: 1px solid #f0f0f0;
+	padding-left: 5px;
+	overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin-bottom: 0;
+    display: inline-block;
+    float: left;
+}
 
+.comment-right-float .btn-up-file{
+	width: 72px;
+	height: 36px;
+	border: 1px solid #00bc12;
+	color: #00bc12;
+	display: inline-block;
+	border-radius: 4px;
+	text-align: center;
+	line-height: 36px;
+	float: left;
+	margin: 0 20px;
+	cursor: pointer;
+}
+.comment-right-float .file-tip{
+	float: left;
+	color: #999999;
+	line-height: 36px;
+}
 
-
-
-
-
-
+.comment-right-float .recruit-text-up{
+	width: 120px;
+	height: 36px;
+	background: #00BC12;
+	border-radius: 4px;
+	border: 1px solid #00bc12;
+	outline: none;
+	color: white;
+	margin-right: 30px;
+}
+.comment-right-float .recruit-other-up{
+	background: white;
+	color: #00bc12;
+}
 
 
 
