课程--评价，调整，购买后，跳转首页修改

--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -796,7 +796,7 @@ color: white;
 /*标签*/
 .select_lable{
 	clear: both;
-	padding-top: 0.4rem;
+	/*padding-top: 0.4rem;*/
 	overflow: hidden;
     margin-bottom: 0.3rem;
 }
