--- a/wechat/src/main/webapp/xcview/css/school_play.css
+++ b/wechat/src/main/webapp/xcview/css/school_play.css
@@ -532,7 +532,7 @@ word-wrap:break-word;
 	margin-right: 0.2rem;
 	font-size: 0.24rem;
 	float: left;
-	margin-top: 0.2rem;
+	margin-bottom: 0.2rem;
 	color: #666;
 }
 /*被恢复的内容-灰色部分*/
